# MetaStuff

./: CMakeLists.txt
cmake/: MetaStuffConfig.cmake.in  pkg-config.pc.in
example/: CMakeLists.txt  JsonCast.h  JsonCast.inl  MovieInfo.h  Person.h  StringCast.cpp  main.cpp
include/MetaStuff/: Member.h  Meta.h  Meta.inl
include/MetaStuff/detail/: template_helpers.h  template_helpers.inl
